changes in index file.

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 
 
   <!--login modal-->
-  <!-- <div class="container">
+  <div class="container">
     <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
@@ -550,7 +550,7 @@
                                   title="Click to login">
                                   <img src="images/CATIA-logo.png" alt="CATIA" class="logo ">
                               </a>
-                          </div> --
+                          </div> -->
             </div>
           </div>
           <div class="modal-footer">
@@ -559,7 +559,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- modal end -->
 
   <!--registration modal-->
@@ -631,6 +631,8 @@
     </div>
   </div> -->
   <!-- modal end -->
+
+  <button class="open-button" href="">Click to Register</button>
 
 
   <!--FOOTER-->
