small design changes.

--- a/BA.html
+++ b/BA.html
@@ -172,7 +172,7 @@
     <section id="ai">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
+                <div class="col-md-12">
                     <h2 class="heading bottom25">Business Analytics<span class="divider-center"></span></h2>
                     <p class="half_space text-justify">This specialization introduces big data analytics for all business professionals, including those with no prior analytics experience. Here the student will learn about the extensive use of statistical analysis, including explanatory and predictive modelling, and fact-based management to drive decision making. This course also focuses on developing new insights and understanding of business performance based on data and statistical methods. The quantifying mechanism which works with big data and performs various functions of business modelling and decision making for business prospects of various companies are also presented here.
                     </p>
@@ -205,10 +205,8 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-            <center>
                 <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
-            </center>
-            <div class="row">
+             <div class="row">
                 <div class="col-md-7">
                     <img class="img-responsive" src="images/BA/market-graph.jpg" alt="graph">
                 </div>
@@ -216,7 +214,7 @@
                     <p class="half_space text-justify">The global Business Analytics software market size was 49700 million US$ and it is expected to reach 104000 million US$ by the end of 2025, with a CAGR of 9.7% during 2018-2025.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;">
+                    <ul style="list-style: inherit;color: #5b5b5b;">
                             <li>Globally average salary is $74k per annum</li>
                             <li>Average salary in India is INR 70lpa across all skill sets</li>
                     </ul>
@@ -235,7 +233,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                     <li>Business analyst </li>
                                     <li>Business intelligence analyst</li>
                                     <li>Technical business analyst</li>
@@ -252,7 +250,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                     <li>Programming</li>
                                     <li>Analytics</li>
                                     <li>Data visualization </li>
@@ -266,11 +264,11 @@
 
     <section id="companies">
         <div class="container">
-            <center>
                 <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
-            </center>
             <div class="row">
+                <div class="col-md-12">
                 <center><img class="img-responsive" src="images/BA/companies.PNG" alt="company"></center>
+                </div>
             </div>
         </div>
     </section><br>
@@ -280,11 +278,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
+                     <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
                         </h2>
-                    </center>
-                </div>
+                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
@@ -327,11 +323,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                      <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
                                 class="divider-left"></span>
                         </h2>
-                    </center>
                 </div>
             </div>
             <div class="row">
