--- a/artificial.html
+++ b/artificial.html
@@ -172,7 +172,7 @@
     <section id="ai">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
+                <div class="col-md-12">
                     <h2 class="heading bottom25">Artificial Intelligence<span class="divider-center"></span></h2>
                     <p class="half_space text-justify">This course helps to gain knowledge on how
                         artificial intelligence makes it possible for machines to learn from experience, adjust to new
@@ -210,9 +210,7 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-            <center>
                 <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
-            </center>
             <div class="row">
                 <div class="col-md-7">
                     <img class="img-responsive" src="images/AIML/market-graph.png" alt="graph">
@@ -223,7 +221,7 @@
                         percent, the software segment would become the large big data market segment by 2027.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;">
+                    <ul style="list-style: inherit;color: #5b5b5b;">
                         <li>Globally average salary will be $130k per annum</li>
                         <li>The median salary in India is INR 14.3 Lakhs across all skill sets</li>
                     </ul>
@@ -272,11 +270,11 @@
 
     <section id="companies">
         <div class="container">
-            <center>
                 <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
-            </center>
             <div class="row">
+                <div class="col-md-12">
                 <center><img class="img-responsive" src="images/AIML/companies.PNG" alt="company"></center>
+                </div>
             </div>
         </div>
     </section><br>
@@ -286,10 +284,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
+                     <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
                         </h2>
-                    </center>
                 </div>
             </div>
             <div class="row">
@@ -340,12 +336,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                      <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
                                 class="divider-left"></span>
                         </h2>
-                    </center>
-                </div>
+                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
