--- a/blockchain.html
+++ b/blockchain.html
@@ -221,7 +221,7 @@
                         USD 7.59 billion by 2024, according to a new report by Grand View Research.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;">
+                    <ul style="list-style: inherit;color: #5b5b5b;">
                             <li>Globally average salary is $80k per annum</li>
                         <li>Average salary in India is ₹80lpa across all skill sets
                         </li>
@@ -241,7 +241,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Backend developer</li>
                                 <li>Blockchain system architect</li>
                                 <li>Blockchain software engineer</li>
@@ -258,7 +258,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Cryptography</li>
                                 <li>Programming</li>
                                 <li>Distributed ledger – concepts</li>
