--- a/cybersecu.html
+++ b/cybersecu.html
@@ -172,7 +172,7 @@
     <section id="ai">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
+                <div class="col-md-12">
                     <h2 class="heading bottom25">Cyber Security<span class="divider-center"></span></h2>
                     <p class="half_space text-justify">
                         This course introduces the basic cyber security concepts, enables the student to identify root
@@ -211,10 +211,8 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-            <center>
-                <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
-            </center>
-            <div class="row">
+               <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
+           <div class="row">
                 <div class="col-md-7">
                     <img class="img-responsive" src="images/CS/market-graph.jpg" alt="graph">
                 </div>
@@ -222,7 +220,7 @@
                     <p class="half_space text-justify">Cyber Security Market is Estimated to Grow at a CAGR of 13.5% over the forecast years (2019 - 2027), with Cyber-attacks Gaining Traction as Fastest Growing Type of Crime Across the Globe, Says Absolute Markets Insights.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;">                        
+                    <ul style="list-style: inherit;color: #5b5b5b;">                        
                             <li>Globally avarage salary is $144k per annum</li>
                         <li>Average salary in India is ₹80lpa across all skill sets</li>
                     </ul>
@@ -241,7 +239,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Information security analyst </li>
                                 <li>Security software developer</li>
                                 <li>Network security architect</li>
@@ -258,7 +256,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Programming</li>
                                 <li>Risk analysis and mitigation</li>
                                 <li>Cloud security </li>
@@ -274,11 +272,11 @@
 
     <section id="companies">
         <div class="container">
-            <center>
-                <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
-            </center>
+               <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
+                <div class="col-md-12">
                 <center><img class="img-responsive" src="images/CS/companies.PNG" alt="company"></center>
+            </div>
             </div>
         </div>
     </section><br>
@@ -288,10 +286,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
+                      <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
                         </h2>
-                    </center>
                 </div>
             </div>
             <div class="row">
@@ -341,12 +337,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                       <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
                                 class="divider-left"></span>
                         </h2>
-                    </center>
-                </div>
+                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
