--- a/datascience.html
+++ b/datascience.html
@@ -223,7 +223,7 @@
                         2021 and 2022 when the market is projected to jump $30B in value in one year.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;">
+                    <ul style="list-style: inherit;color: #5b5b5b;">
                             <li>Globally average salary will be $117k per annum</li>
                         <li>Average salary in India is INR 68lpa across all skill sets</li>
                     </ul>
@@ -242,7 +242,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Data analyst </li>
                                 <li>Data scientist</li>
                                 <li>Product analyst</li>
@@ -257,7 +257,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Programming</li>
                                 <li>Analytics</li>
                                 <li>Data visualization </li>
