--- a/iot.html
+++ b/iot.html
@@ -224,7 +224,7 @@
                         $1.2T in 2022, attaining a CAGR of 13.6% over the 2017-2022 forecast period according to IDC.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;">
+                    <ul style="list-style: inherit;color: #5b5b5b;">
                             <li>Globally average salary is $92,283 per annum</li>
                         <li>Median salary in India is ₹15.2lpa across all skill sets</li>
                     </ul>
@@ -243,7 +243,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Network engineer </li>
                                 <li>Backend developer</li>
                                 <li>Technical consultant</li>
@@ -259,7 +259,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Programming</li>
                                 <li>Networking</li>
                                 <li>Analytics</li>
