--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
   <section id="ibm" class="bottom25">
     <div class="container margin10">
       <div class="row">
-        <div class="col-md-12 priorty wow fadeInLeft" data-wow-delay="300ms">
-          <center><h2 class="heading bottom25">IBM<span class="divider-center"></span></h2></center>
-          <ul>
+        <div class="col-md-6">
+          <h2 class="heading bottom25">About IBM<span class="divider-center"></span></h2>
+          <!-- <ul>
             <li><i class="design fa fa-hand-o-right"></i>IBM is a global technology and innovation company headquartered
               in Armonk, NY. Started in 1911</li>
             <li><i class="design fa fa-hand-o-right"></i>Largest technology employer in the world and employ 380,000
@@ -205,7 +205,32 @@
               17 Billion)</li>
             <li><i class="design fa fa-hand-o-right"></i>We live at the intersection of business and technology and
               today, we are a cognitive solutions and cloud platform company, transforming entire industries</li>
-          </ul>
+          </ul> -->
+          <p class="text-justify">IBM is a global technology and innovation company headquartered
+            in Armonk, NY. Started in 1911. A century of innovation - One of only 2 companies to remain in
+            the top 25 Industrial companies since 1900. In 2017, IBM’s Revenue was USD 79.1 billion revenue (Cloud- USD
+            17 Billion). We live at the intersection of business and technology and
+            today, we are a cognitive solutions and cloud platform company, transforming entire industries</p>
+          
+        </div>
+        <div class="col-md-6">
+          <div class="wrap">
+              <iframe width="100%" height="250" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+              <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
+              <!-- <h1>Blockchain</h1> -->
+              <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
+  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+          </div>
+      </div>
+      </div>
+    </div>
+  </section>
+  <!--ABout US-->
+
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
           <p class="text-justify margin10 half_space">The IBM Innovation Centre for Education
             collaborates with universities to co-create degrees that let industry professionals and students interact
             and prepare for solving the problems of tomorrow. IBM works with its partner ecosystem as well as thousands
@@ -224,14 +249,13 @@
       </div>
     </div>
   </section>
-  <!--ABout US-->
 
   <!--ASAP-->
   <section id="asap" class="bottom25">
     <div class="container margin10">
       <div class="row">
         <div class="col-md-12 priorty">
-         <center><h2 class="heading bottom25">Additional Skill Aquisition Program<span class="divider-left"></span></h2></center>
+         <h2 class="heading bottom25">About Additional Skill Aquisition Program<span class="divider-left"></span></h2>
           <p class="text-justify margin10 half_space">To address the concern of the growing
             educated-unemployment rates of the State, the SSDP or State Skill Development Project was enacted, in the
             year 2012. This was following the realization that Kerala has the human resource and the potential to soar
@@ -260,8 +284,8 @@
     <div class="container margin10">
       <div class="row">
         <div class="col-md-12 priorty">
-         <center><h2 class="heading bottom25">IBM In Kerala - Community Skill Park Kalamassery<span
-              class="divider-left"></span></h2></center>
+         <h2 class="heading bottom25">IBM joins hands with ASAP – CSP Kalamassery<span
+              class="divider-left"></span></h2>
           <p class="text-justify margin10 half_space">To address the concern of the growing educated-unemployment rates
             of the State, the SSDP or State Skill Development Project was enacted, in the year 2012. This was following
             the realization that Kerala has the human resource and the potential to soar up to become a radial point for
@@ -752,6 +776,39 @@
         }
       });
     }
+
+     // video
+
+        /*Floating Code for Iframe Start*/
+        if (jQuery('iframe[src*="https://www.youtube.com/embed/"],iframe[src*="https://player.vimeo.com/"],iframe[src*="https://player.vimeo.com/"]').length > 0) {
+            /*Wrap (all code inside div) all vedio code inside div*/
+            jQuery('iframe[src*="https://www.youtube.com/embed/"],iframe[src*="https://player.vimeo.com/"]').wrap("<div class='iframe-parent-class'></div>");
+            /*main code of each (particular) vedio*/
+            jQuery('iframe[src*="https://www.youtube.com/embed/"],iframe[src*="https://player.vimeo.com/"]').each(function (index) {
+
+                /*Floating js Start*/
+                var windows = jQuery(window);
+                var iframeWrap = jQuery(this).parent();
+                var iframe = jQuery(this);
+                var iframeHeight = iframe.outerHeight();
+                var iframeElement = iframe.get(0);
+                windows.on('scroll', function () {
+                    var windowScrollTop = windows.scrollTop();
+                    var iframeBottom = iframeHeight + iframeWrap.offset().top;
+                    //alert(iframeBottom);
+
+                    if ((windowScrollTop > iframeBottom)) {
+                        iframeWrap.height(iframeHeight);
+                        iframe.addClass('stuck');
+                        jQuery(".scrolldown").css({ "display": "none" });
+                    } else {
+                        iframeWrap.height('auto');
+                        iframe.removeClass('stuck');
+                    }
+                });
+                /*Floating js End*/
+            });
+        }
 
   </script>
 
