--- a/artificial.html
+++ b/artificial.html
@@ -240,7 +240,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Machine learning engineer</li>
                                 <li>Big data engineer</li>
                                 <li>Data scientist</li>
@@ -256,7 +256,7 @@
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;">
+                            <ul style="list-style: inherit;color: #5b5b5b;">
                                 <li>Programming</li>
                                 <li>Communication skills</li>
                                 <li>Leadership skills</li>
