--- a/certificate.html
+++ b/certificate.html
@@ -172,7 +172,7 @@
     <section id="ai">
         <div class="container margin_top">
             <div class="row">
-                <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
+                <div class="col-md-12">
                     <h2 class="heading bottom25">IBM Global Certification Program<span class="divider-center"></span>
                     </h2>
                     <p class="half_space text-justify">The IBM ICE program provides a framework that helps to simulate a
@@ -214,6 +214,9 @@
                     <div class="col-md-4">
                         <img class="img-responsive" src="images/certificate/certificate_5.png" alt="certificate">
                     </div>
+                    <div class="col-md-4">
+                            <img class="img-responsive" src="images/certificate/certificate_4.png" alt="certificate">
+                        </div>
                 </div>
             </div>
         </div>
