--- a/datascience.html
+++ b/datascience.html
@@ -172,7 +172,7 @@
     <section id="ai">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
+                <div class="col-md-12" >
                     <h2 class="heading bottom25">Data Science<span class="divider-center"></span></h2>
                     <p class="half_space text-justify">
                         Data Science (DS) is a new, exponentially-growing field, consisting of a set of tools and
@@ -210,9 +210,7 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-            <center>
-                <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
-            </center>
+              <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-7">
                     <img class="img-responsive" src="images/datascience/market-graph.jpg" alt="graph">
@@ -271,11 +269,11 @@
 
     <section id="companies">
         <div class="container">
-            <center>
-                <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
-            </center>
+              <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
+                <div class="col-md-12">
                 <center><img class="img-responsive" src="images/datascience/companies.PNG" alt="company"></center>
+            </div>
             </div>
         </div>
     </section><br>
@@ -285,10 +283,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
+                    <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
                         </h2>
-                    </center>
                 </div>
             </div>
             <div class="row">
@@ -340,11 +336,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                   <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
                                 class="divider-left"></span>
                         </h2>
-                    </center>
                 </div>
             </div>
             <div class="row">
