--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
     <section id="ai">
         <div class="container bottom25">
             <div class="row">
-                <div class="col-md-12 text-center" >
+                <div class="col-md-12" >
                     <h2 class="heading bottom25">Contact<span class="divider-center"></span></h2>
                 </div>
             </div>
