--- a/artificial.html
+++ b/artificial.html
@@ -173,7 +173,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">Artificial Intelligence<span class="divider-center"></span></h2>
+                    <h2 class="heading bottom25">Artificial Intelligence<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">This course helps to gain knowledge on how
                         artificial intelligence makes it possible for machines to learn from experience, adjust to new
                         inputs and perform human-like tasks. The audience will learn about the technologies like machine
