--- a/blockchain.html
+++ b/blockchain.html
@@ -172,8 +172,8 @@
     <section id="ai">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
-                    <h2 class="heading bottom25">Blockchain<span class="divider-center"></span></h2>
+                <div class="col-md-12">
+                    <h2 class="heading bottom25">Blockchain<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">This course provides an overview on the blockchain, the
                         technologies involved in blockchain, the components of blockchain and its advantages. It helps
                         to gain knowledge on building the blockchain application using Hyperledger which includes
