--- a/certificate.html
+++ b/certificate.html
@@ -173,7 +173,7 @@
         <div class="container margin_top">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">IBM Global Certification Program<span class="divider-center"></span>
+                    <h2 class="heading bottom25">IBM Global Certification Program<span class="divider-left"></span>
                     </h2>
                     <p class="half_space text-justify">The IBM ICE program provides a framework that helps to simulate a
                         real-life work environment of an IT organization on-campus. The ICE online platform provides the
