--- a/contact.html
+++ b/contact.html
@@ -173,12 +173,12 @@
         <div class="container bottom25">
             <div class="row">
                 <div class="col-md-12" >
-                    <h2 class="heading bottom25">Contact<span class="divider-center"></span></h2>
+                    <h2 class="heading bottom25">Contact<span class="divider-left"></span></h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                            <h4 class="heading bottom25">Reach Us<span class="divider-center"></span>
+                            <h4 class="heading bottom25">Reach Us<span class="divider-left"></span>
                             </h4>
                             <p class="text-justify"><b>IBM Global Certiﬁcation Program Center</b></p>
                             <p class="text-justify"><i class="fa fa-map-marker" style="padding-right: 8px;color: #00abbd;"></i>NAD Rd, HMT Colony, North Kalamassery, HMT Kalamassery, Ernakulam, Kerala 6835033</p>
