--- a/cybersecu.html
+++ b/cybersecu.html
@@ -173,7 +173,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">Cyber Security<span class="divider-center"></span></h2>
+                    <h2 class="heading bottom25">Cyber Security<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">
                         This course introduces the basic cyber security concepts, enables the student to identify root
                         causes of vulnerabilities in a network system and distinguish them from the threats from both
