--- a/datascience.html
+++ b/datascience.html
@@ -173,7 +173,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" >
-                    <h2 class="heading bottom25">Data Science<span class="divider-center"></span></h2>
+                    <h2 class="heading bottom25">Data Science<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">
                         Data Science (DS) is a new, exponentially-growing field, consisting of a set of tools and
                         techniques used to extract valuable information from data. Data Science is an interdisciplinary,
