--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div class="container margin10">
       <div class="row">
         <div class="col-md-6">
-          <h2 class="heading bottom25">About IBM<span class="divider-center"></span></h2>
+          <h2 class="heading bottom25">About IBM<span class="divider-left"></span></h2>
           <!-- <ul>
             <li><i class="design fa fa-hand-o-right"></i>IBM is a global technology and innovation company headquartered
               in Armonk, NY. Started in 1911</li>
