--- a/iot.html
+++ b/iot.html
@@ -172,8 +172,8 @@
     <section id="ai">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
-                    <h2 class="heading bottom25">Internet Of Things<span class="divider-center"></span></h2>
+                <div class="col-md-12">
+                    <h2 class="heading bottom25">Internet Of Things<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">
                         This course covers in-depth concepts of IoT framework, IoT ecosystem, IoT solution architecture,
                         networking protocols and application layer protocols. It also provides case studies which will
