--- a/BA.html
+++ b/BA.html
@@ -173,7 +173,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">Business Analytics<span class="divider-center"></span></h2>
+                    <h2 class="heading bottom25">Business Analytics<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">This specialization introduces big data analytics for all business professionals, including those with no prior analytics experience. Here the student will learn about the extensive use of statistical analysis, including explanatory and predictive modelling, and fact-based management to drive decision making. This course also focuses on developing new insights and understanding of business performance based on data and statistical methods. The quantifying mechanism which works with big data and performs various functions of business modelling and decision making for business prospects of various companies are also presented here.
                     </p>
                 </div>
