--- a/contact.html
+++ b/contact.html
@@ -178,8 +178,8 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                            <h4 class="heading bottom25">Reach Us<span class="divider-left"></span>
-                            </h4>
+                            <!-- <h4 class="heading bottom25">Reach Us<span class="divider-left"></span>
+                            </h4> -->
                             <p class="text-justify"><b>IBM Global Certiﬁcation Program Center</b></p>
                             <p class="text-justify"><i class="fa fa-map-marker" style="padding-right: 8px;color: #00abbd;"></i>NAD Rd, HMT Colony, North Kalamassery, HMT Kalamassery, Ernakulam, Kerala 6835033</p>
                             <p><i class="fa fa-phone" style="padding-right: 8px;color: #00abbd;"></i>080 4140 0440	</p>
