--- a/artificial.html
+++ b/artificial.html
@@ -218,7 +218,7 @@
                 <div class="col-md-5">
                     <p class="half_space text-justify">The global market is forecasted to grow to 103 billion
                         U.S. dollars by 2027, more than double its expected market size in 2018. With a share of 45
-                        percent, the software segment would become the large big data market segment by 2027.
+                        percent, the software segment would become the large market segment by 2027.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
                     <ul style="list-style: inherit;color: #5b5b5b;">
