--- a/cybersecu.html
+++ b/cybersecu.html
@@ -251,7 +251,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/jobs.jpg">
+                        <img class="img-responsive" src="images/AIML/skills.jpg>
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
